--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
-OPENAI_API_KEY= "your openai api key"
-TELEGRAM_API_KEY= "your telegram api key"
-VOICE_API = "http://localhost:5002"
+OPENAI_API_KEY=your-openai-api-key
+TELEGRAM_API_KEY=your-telegram-api-key
+ALLOWED_TELEGRAM_IDS=account1,account2
+VOICE_API=http://localhost:5002
