--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-3.5-turbo
 TELEGRAM_API_KEY=your-telegram-api-key
 ALLOWED_TELEGRAM_IDS=account1,account2
 VOICE_API=http://localhost:5002
